<resources>
    <string name="app_name">App Portfolio</string>
    <string name="app_label">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies_button_en">Popular Movies</string>
    <string name="stock_hawk_button_en">Stock Hawk</string>
    <string name="build_it_bigger_btn_en">Build it BIGGER</string>
    <string name="make_your_app_material_btn_en">Make your App Material</string>
    <string name="go_ubiquitous_btn_en">GO Ubiquitous</string>
    <string name="capstone_btn_en">Capstone</string>
</resources>
