<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.showkat.udacityapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/app_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/app_heading_margin_bottom"
            android:layout_marginTop="@dimen/app_heading_margin_top"
            android:text="@string/my_nanodegree_apps"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/popular_movies_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/app_heading"
            android:layout_alignLeft="@+id/app_heading"
            android:layout_alignRight="@+id/app_heading"
            android:layout_alignStart="@+id/app_heading"
            android:layout_below="@+id/app_heading"
            android:onClick="clickPopularMovies"
            android:text="@string/popular_movies_button_en" />

        <Button
            android:id="@+id/stock_hawk_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/build_it_bigger_btn"
            android:layout_alignLeft="@+id/build_it_bigger_btn"
            android:layout_alignRight="@+id/build_it_bigger_btn"
            android:layout_alignStart="@+id/build_it_bigger_btn"
            android:layout_below="@+id/popular_movies_btn"
            android:onClick="clickStockHawk"
            android:text="@string/stock_hawk_button_en" />


        <Button
            android:id="@+id/build_it_bigger_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/popular_movies_btn"
            android:layout_alignLeft="@+id/make_your_app_material_btn"
            android:layout_alignRight="@+id/popular_movies_btn"
            android:layout_alignStart="@+id/make_your_app_material_btn"
            android:layout_below="@+id/stock_hawk_btn"
            android:onClick="clickBuildItBigger"
            android:text="@string/build_it_bigger_btn_en" />


        <Button
            android:id="@+id/make_your_app_material_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/popular_movies_btn"
            android:layout_alignLeft="@+id/popular_movies_btn"
            android:layout_alignRight="@+id/popular_movies_btn"
            android:layout_alignStart="@+id/popular_movies_btn"
            android:layout_below="@+id/build_it_bigger_btn"
            android:onClick="clickAppMaterial"
            android:text="@string/make_your_app_material_btn_en" />

        <Button
            android:id="@+id/go_ubiquitous_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/make_your_app_material_btn"
            android:layout_alignLeft="@+id/make_your_app_material_btn"
            android:layout_alignRight="@+id/make_your_app_material_btn"
            android:layout_alignStart="@+id/make_your_app_material_btn"
            android:layout_below="@+id/make_your_app_material_btn"
            android:onClick="clickUbiquitous"
            android:text="@string/go_ubiquitous_btn_en" />

        <Button
            android:id="@+id/capstone_btn"
            style="@style/CustomButtonStyle"
            android:layout_alignEnd="@+id/go_ubiquitous_btn"
            android:layout_alignLeft="@+id/go_ubiquitous_btn"
            android:layout_alignRight="@+id/go_ubiquitous_btn"
            android:layout_alignStart="@+id/go_ubiquitous_btn"
            android:layout_below="@+id/go_ubiquitous_btn"
            android:onClick="clickCapstone"
            android:text="@string/capstone_btn_en" />


    </RelativeLayout>
</ScrollView>
